# Algorytmy-Geometryczne

./: .gitignore  CMakeLists.txt  README.md  test.py  vis.py
.github/workflows/: cmake-single-platform.yml
dependencies/: CMakeLists.txt
src/: main.cpp  visualizer.cpp  visualizer.h
